force-app/main/default/objects/Business_Case_Sales_Snapshot__c/Business_Case_Sales_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Monthly snapshots of Business Case sales performance with machine counts and KPIs for historical reporting accuracy</description>
    <label>Business Case Sales Snapshot</label>
    <nameField>
        <displayFormat>BCSS-{0000000}</displayFormat>
        <label>Business Case Sales Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Case Sales Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>