force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Auto_Business_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Auto_Business_Case_Key__c</fullName>
    <description>DEBUG: Auto-generated Business Case Key for validation against Apex logic - Customer Code + Vendor + Technology</description>
    <formula>Customer_Code__c + &quot;|&quot; + 
LEFT(Vendor__c, FIND(&quot; - &quot;, Vendor__c + &quot; - &quot;) - 1) + &quot;|&quot; + 
LEFT(Technology__c, FIND(&quot; - &quot;, Technology__c + &quot; - &quot;) - 1) + &quot;|&quot; + 
TEXT(YEAR(Snapshot_Month__c)) + &quot;-&quot; + 
LPAD(TEXT(MONTH(Snapshot_Month__c)), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Business Case Key (DEBUG)</label>
    <type>Text</type>
</CustomField>