force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Avg_Margin_Reagent_Sales__c.field-meta.xml
<CustomField>
    <fullName>Avg_Margin_Reagent_Sales__c</fullName>
    <label>Avg Margin Reagent Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>