force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Avg_Reagent_Sales_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Avg_Reagent_Sales_Per_Month__c</fullName>
    <description>Average monthly reagent sales since contract start</description>
    <label>Avg Reagent Sales Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>