force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Avg_YTD_Sales_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Avg_YTD_Sales_Per_Month__c</fullName>
    <label>Avg YTD Sales Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>