force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Business Case this snapshot belongs to</description>
    <label>Business Case</label>
    <referenceTo>Business_Case__c</referenceTo>
    <relationshipLabel>Sales Snapshots</relationshipLabel>
    <relationshipName>Sales_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>