force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Business_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Key__c</fullName>
    <description>Unique key combining Customer Code + Vendor + Technology for upsert operations</description>
    <label>Business Case Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>