force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Business_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Status__c</fullName>
    <label>Business Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>