force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Business_Comments__c.field-meta.xml
<CustomField>
    <fullName>Business_Comments__c</fullName>
    <description>Qualitative comments from business users about performance this month</description>
    <label>Business Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>