force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Contract_Months_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months_Elapsed__c</fullName>
    <description>Number of months elapsed since contract agreement date</description>
    <label>Contract Months Elapsed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>