force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Currency code for multi-currency organizations</description>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>