force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Customer_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>Customer_AddressLine1__c</fullName>
    <label>Customer AddressLine1</label>
    <type>TextArea</type>
</CustomField>