force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Customer_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Customer_AddressLine2__c</fullName>
    <label>Customer AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>