force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <description>Customer code from SAP - part of the Business Case grouping key</description>
    <label>Customer Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>