force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Customer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Postal_Code__c</fullName>
    <label>Customer Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>