force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Customer_Province__c.field-meta.xml
<CustomField>
    <fullName>Customer_Province__c</fullName>
    <label>Customer Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>