force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <description>Confidence score in the accuracy of this snapshot data (0-100)</description>
    <label>Data Quality Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>