force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Deficit_Cost_Covered__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Cost_Covered__c</fullName>
    <description>Surplus (+) or deficit (-) compared to expected target</description>
    <label>Deficit Cost Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>