force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Machine_Count__c.field-meta.xml
<CustomField>
    <fullName>Machine_Count__c</fullName>
    <description>Number of machines for this Business Case at the time of snapshot creation</description>
    <label>Machine Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>