force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Machine_Status__c.field-meta.xml
<CustomField>
    <fullName>Machine_Status__c</fullName>
    <label>Machine Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>