force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Margin_On_Reagent_Sale__c.field-meta.xml
<CustomField>
    <fullName>Margin_On_Reagent_Sale__c</fullName>
    <description>Calculated margin amount on monthly reagent sales</description>
    <label>Margin On Reagent Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>