force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>Profit margin percentage for this Business Case and month</description>
    <label>Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>