force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Margin_Percent_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent_Snapshot__c</fullName>
    <label>Margin Percent Snapshot</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>