force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Margin_till_Date__c.field-meta.xml
<CustomField>
    <fullName>Margin_till_Date__c</fullName>
    <label>Margin till Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>