force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <label>Material Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>