force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Monthly_Commitments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Commitments__c</fullName>
    <label>Monthly Commitments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>