force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Payback_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Payback_Remaining__c</fullName>
    <description>Estimated remaining payback amount for this Business Case</description>
    <label>Payback Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>