force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Per_Machine_Sales__c.field-meta.xml
<CustomField>
    <fullName>Per_Machine_Sales__c</fullName>
    <description>Calculated field: Total Reagent Sales divided by Machine Count</description>
    <formula>IF(Machine_Count__c &gt; 0, Total_Reagent_Sales__c / Machine_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Machine Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>