force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>Performance_Status__c</fullName>
    <description>Contract performance status based on target achievement</description>
    <label>Performance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
            <value>
                <fullName>No Target Set</fullName>
            </value>
            <value>
                <fullName>No Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>