force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>Status of the snapshot processing</description>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>