force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Business region for reporting and filtering</description>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>