force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Ship_To_Province__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Province__c</fullName>
    <label>Ship To Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>