force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Snapshot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Created_Date__c</fullName>
    <description>Date when this snapshot was created by the batch process</description>
    <label>Snapshot Created Date</label>
    <type>Date</type>
</CustomField>