force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Month__c</fullName>
    <description>The month and year this snapshot represents (first day of the month)</description>
    <label>Snapshot Month</label>
    <required>true</required>
    <type>Date</type>
</CustomField>