force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Source_Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Source_Invoice_Count__c</fullName>
    <description>Number of invoice line items that contributed to this snapshot</description>
    <label>Source Invoice Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>