force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Target_Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Target_Achievement_Percent__c</fullName>
    <description>Calculated field: (Total Reagent Sales / Target Sales) * 100</description>
    <formula>IF(Target_Sales__c &gt; 0, (Total_Reagent_Sales__c / Target_Sales__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>