force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Target_Sales__c.field-meta.xml
<CustomField>
    <fullName>Target_Sales__c</fullName>
    <description>Target sales amount for this Business Case and month</description>
    <label>Target Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>