force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>Technology type - part of the Business Case grouping key</description>
    <label>Technology</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>