force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Total_Reagent_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Reagent_Sales__c</fullName>
    <description>Total reagent sales amount for this Business Case in this month</description>
    <label>Total Reagent Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>