force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Total_Reagent_Sales_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Reagent_Sales_Till_Date__c</fullName>
    <description>Cumulative reagent sales from contract start to snapshot month</description>
    <label>Total Reagent Sales Till Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>