force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Vendor name - part of the Business Case grouping key</description>
    <label>Vendor</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>