force-app/main/default/objects/Business_Case_Sales_Snapshot__c/fields/YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales__c</fullName>
    <description>Year-to-date sales amount up to and including this snapshot month</description>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>