force-app/main/default/objects/Business_Case_Sales_Snapshot__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Standard Business Case Sales Snapshot</description>
    <label>Standard</label>
</RecordType>